--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "mysql": "~2.13.0",
+    "async": "~2.1.4"
   }
 }
