--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 before_install:
   - cp ./database/config.travis.js ./database/config.js
   - mysql -e 'CREATE DATABASE IF NOT EXISTS sep_test;'
+  - npm install
 
 install:
   - npm install
