--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
     "mysql": "~2.13.0",
-    "async": "~2.1.4"
+    "async": "~2.1.4",
+    "bcrypt": "~1.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
